# fixturedb

./: .gitignore  HOW_TO_USE.md  README.md  cloner.py  config.py  eda.py  exporter.py  extractor.py  pipeline.py  pyproject.toml  requirements.txt  validator.py
.github/workflows/: coverage.yml
collection/: cloner.py  complexity_provider.py  config.py  db.py  detector.py  exporter.py  extractor.py  fixture_classifier.py  search.py  validator.py
corpus/: classifier.py  cloner.py  config.py  db.py  detector.py  extractor.py  fixture_classifier.py  search.py
docs/: 01-intro.md  02-repository-structure.md  03-database-schema.md  04-data-collection.md  06-setup.md  07-running.md  08-reproducing.md  09-usage.md  10-configuration.md  11-detection.md  12-limitations.md  14-csv-export-guide.md  14-testing-quick-ref.md  14-testing.md  15-language-specific-csv-export.md  16-data-pipeline-overview.md  17-phase-3-advanced-metrics.md  19-references.md  COMPLEXITY_METRICS_MIGRATION.md  INDEX.md  METRICS_AUDIT_AND_EXTERNAL_TOOLS.md  collection-pipeline.md
docs/architecture/: 03-database-schema.md  11-detection.md  database-schema.md  (+4 more)
eda/: 01_corpus_composition.py  02_star_distribution.py  03_age_and_activity.py  04_domain_distribution.py  05_stars_vs_forks.py  06_fixture_overview.py  07_mock_prevalence.py  08_fixture_categories.py  __init__.py  eda.py  eda_common.py  qualitative_eda.py  quantitative_eda.py
tests/: TEST_PLAN.md  conftest.py  test_extractor_coverage.py  test_framework_detection.py  test_framework_gaps.md  test_github_search_loader.py  test_test_file_discovery.py
(+73 files in other folders)
